Smarter Layouts with flex-basis and flex

--- a/index.html
+++ b/index.html
@@ -8,12 +8,39 @@
 </head>
 <body>
 	<div class="container">
-		<div class="item-1 item">Item 1</div>
-		<div class="item-2 item">Item 2</div>
-		<!-- <div class="item-3 item">Item 3</div>
-		<div class="item-4 item">Item 4</div>
-		<div class="item-5 item">Item 5</div>
+		<div class="item-1 item">Item 1
+      <p>A full stack web developer involved in creating and designing modern and responsive web applications</p>
+      <p>Works with business and design teams to help refine requirements. Works both independently and with teams of other developers.</p>
+    </div>
+		<div class="item-2 item">Item 2
+      <p>Creates modern, responsive web applications using HTML, CSS, and JavaScript.</p>
+      <p>Creates backend systems using PHP.</p>
+    </div>
+		<div class="item-3 item">Item 3
+      <p>Develops SQL database tables and queries.</p>
+      <p>Understands HTTP and AJAX network requests.</p>
+    </div>
+		<div class="item-4 item">Item 4
+      <!-- <p>Knowledge of third-party and internal API integration.</p> -->
+    </div>
+		<!-- <div class="item-5 item">Item 5</div>
 		<div class="item-6 item">Item 6</div> -->
 	</div>
 </body>
 </html>
+
+<!-- Understands businesses that require refined specifications based on business needs -->
+<!-- Writes well-designed, testable, and documented code
+Maintains code using a version control system such as Git
+Uses Agile/Scrum methodology
+Will thrive in a fast-paced environment
+Learns rapidly and is able to master diverse web technologies and techniques
+Familiar with front-end JavaScript frameworks such as Ember.js or AngularJS
+
+Competencies:
+Attention to Detail - careful about detail and thorough in completing work tasks
+Analytical Thinking - analyzes information and uses logic to address work-related issues and problems
+Dependable - reliable, responsible, and fulfills obligations
+Integrity - honest and ethical
+Initiative - willingness to take on responsibilities and challenges
+Communication - Excellent communicator -->
