--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="item-1 item">Item 1
       <p>A full stack web developer involved in creating and designing modern and responsive web applications</p>
-      <p>Works with business and design teams to help refine requirements. Works both independently and with teams of other developers.</p>
+      <!-- <p>Works with business and design teams to help refine requirements. Works both independently and with teams of other developers.</p> -->
     </div>
 		<div class="item-2 item">Item 2
       <p>Creates modern, responsive web applications using HTML, CSS, and JavaScript.</p>
@@ -21,7 +21,7 @@
       <p>Understands HTTP and AJAX network requests.</p>
     </div>
 		<div class="item-4 item">Item 4
-      <!-- <p>Knowledge of third-party and internal API integration.</p> -->
+      <p>Knowledge of third-party and internal API integration.</p>
     </div>
 		<!-- <div class="item-5 item">Item 5</div>
 		<div class="item-6 item">Item 6</div> -->
